[package]
name = "zcash_client_backend"
description = "APIs for creating shielded Zcash light clients"
version = "0.5.0"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kris Nuttycombe <kris@electriccoin.co>"
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bech32 = "0.8"
bls12_381 = "0.7"
bs58 = { version = "0.4", features = ["check"] }
base64 = "0.13"
ff = "0.12"
group = "0.12"
hex = "0.4"
hdwallet = { version = "0.3.1", optional = true }
jubjub = "0.9"
log = "0.4"
nom = "7"
orchard = "0.2"
percent-encoding = "2.1.0"
proptest = { version = ">=1.0, <1.7", optional = true } # Pin below 1.7 to avoid rand 0.9 conflict with orchard
protobuf = "~2.27.1" # TODO: Upgrade to 3.x requires significant API changes (RUSTSEC-2024-0437)
rand_core = "0.6"
ripemd = { version = "0.1", optional = true }
secp256k1 = { version = "0.29", optional = true } # Updated for security fix CVE-2022-0070
sha2 = { version = "0.10.1", optional = true }
subtle = "2.2.3"
time = "0.2"
zcash_address = { version = "0.1", path = "../components/zcash_address" }
zcash_note_encryption = { version = "0.1", path = "../components/zcash_note_encryption" }
zcash_primitives = { version = "0.7", path = "../zcash_primitives" }

[build-dependencies]
protobuf-codegen-pure = "~2.27.1" # TODO: Upgrade to 3.x requires API migration

[dev-dependencies]
gumdrop = "0.8"
rand_xorshift = "0.3"
tempfile = "3.1.0"
zcash_proofs = { version = "0.7", path = "../zcash_proofs" }

[features]
transparent-inputs = ["ripemd", "hdwallet", "sha2", "secp256k1", "zcash_primitives/transparent-inputs"]
test-dependencies = [
    "proptest",
    "orchard/test-dependencies",
    "zcash_primitives/test-dependencies",
]

[lib]
bench = false

[badges]
maintenance = { status = "actively-developed" }
